# lanorme

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  action.yml  lanorme.schema.json  llms-full.txt  llms.txt  mkdocs.yml  pyproject.toml  versions.json
.agents/skills/: docs-audit.md  merge-ready.md  release-lanorme.md
.claude/skills/merge-ready/: SKILL.md
.claude/workflows/: docs-audit.js
.github/: secret_scanning.yml
.github/workflows/: ci.yml  docs.yml  release.yml
0.13.0/: 404.html  RULES.md  index.html  lanorme.toml  llms-full.txt  sitemap.xml
0.13.0/RULES/: index.html
0.13.0/audit/: 03-security-ops.md  04-linter-design.md
0.13.0/explanation/: index.html
0.13.0/how-to/: index.html
0.13.0/reference/: index.html
0.13.0/tutorials/: index.html
0.14.0/: 404.html  RULES.md  cmt001-corpus-design.md  index.html  sitemap.xml
0.14.0/RULES/: index.html
0.14.0/audit/: SUMMARY.md
0.14.0/explanation/: index.html  index.md
0.14.0/how-to/: index.html  index.md
0.14.0/reference/: index.html
0.14.0/tutorials/: index.html
0.14.1/: 404.html  RULES.md  cmt005-design.md  index.html  llms-full.txt  sitemap.xml
0.14.1/RULES/: index.html
0.14.1/explanation/: index.html  precision-first.md
0.14.1/how-to/: index.html
0.14.1/reference/: cli.md  index.html  index.md
0.14.1/tutorials/: index.html
0.14.2/: 404.html  RULES.md  index.html  llms-full.txt  llms.txt  sec003-corpus-design.md  sitemap.xml
0.14.2/RULES/: index.html
0.14.2/audit/: 01-generic-python.md  02-ddd-architecture.md
0.14.2/explanation/: index.html
0.14.2/how-to/: configure-checks.md  index.html
0.14.2/reference/: index.html
0.14.2/tutorials/: index.html  index.md
benchmarks/: README.md  audit.py  score_cmt001.py  score_cmt005.py  score_prose004.py  score_sec002.py  score_sec003.py  score_similar.py
benchmarks/results/: README.md
dev/: 404.html  index.html  index.md  llms-full.txt  sec002-corpus-design.md  sec003-corpus-design.md  sitemap.xml
dev/RULES/: index.html
dev/explanation/: index.html
dev/how-to/: index.html
dev/javascripts/: md-actions.js
dev/reference/: index.html  rules-index.md
dev/search/: search_index.json
dev/tutorials/: index.html
docs/: ARCHITECTURE_PROFILES.md  RULES.md  cmt001-corpus-design.md  cmt005-corpus-audit.md  index.md  sec002-corpus-design.md  sec003-corpus-design.md
docs/explanation/: docs-architecture.md  precision-first.md
docs/how-to/: configure-checks.md  promote-warnings.md  use-profiles.md  write-a-check.md
docs/reference/: cli.md  configuration.md  rules-index.md
docs/stylesheets/: md-actions.css
docs/tutorials/: adopt-on-existing-codebase.md
evals/: README.md  audit.py  score_cmt001.py  score_cmt005.py  score_prose004.py  score_sec002.py  score_sec003.py  score_similar.py
evals/results/: README.md  v0.13.0.json  v0.14.0.json  v0.14.1.json  v0.14.2.json
examples/four-layer/: lanorme.toml
hooks/: copy_sources.py
overrides/: main.html
scripts/: check.sh  gen_docs.py  release.sh  sync-agents.sh
src/lanorme/: __init__.py  baseline.py  cli.py  discovery.py  filtering.py  presets.py  regions.py  reporting.py
tests/unit/: conftest.py  test_attribute_access.py  test_audit.py  test_baseline.py  test_check_context.py  test_cli_cascading.py  test_cli_output.py  test_cli_targets.py  test_cli_wiring.py  test_comments.py  test_complexity_metric.py  test_coverage_standard.py  test_discovery.py  test_docs.py  test_docs_generated.py  test_domain_terms.py  test_duplication.py  test_file_limits.py  test_forbidden_paths.py  test_inline_ignores.py  test_layer_deps.py  test_layer_deps_config.py  test_meta.py  test_mutable_defaults.py  test_named_args.py  test_naming_consistency.py  test_pattern_divergence.py  test_port_coverage.py  test_port_coverage_config.py  test_profiles.py  test_promote.py  test_prose.py  test_regions.py  test_registry.py  test_restating.py  test_secrets.py  test_security_calls.py  test_security_patterns.py  test_similarity.py  test_skills.py  (+10 more)
(+285 files in other folders)
