[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lanorme"
version = "0.12.0"
description = "Executable codebase standards for Python: quality, style, architecture, and structure, checked mechanically on every commit."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
keywords = ["code-quality", "static-analysis", "checks", "normes", "code-review", "pre-commit", "git-hook", "architecture", "linter", "ddd", "hexagonal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage   = "https://github.com/lanorme/lanorme"
Repository = "https://github.com/lanorme/lanorme"
Issues     = "https://github.com/lanorme/lanorme/issues"
Changelog  = "https://github.com/lanorme/lanorme/blob/main/CHANGELOG.md"

[project.scripts]
lanorme = "lanorme.cli:main"

# Plugin packages register checks under this entry-point group.
# [project.entry-points."lanorme.checks"]
# my-check = "my_package.my_module"

# Runnable as ``uv run --group dev pytest tests/unit``.
[dependency-groups]
dev = ["pytest>=8"]
# Docs site only; not a runtime or test dependency. The agent-facing artifacts
# (Markdown, llms.txt, lanorme.schema.json) are generated without these.
docs = ["mkdocs-material>=9.5", "mike>=2.1"]

[tool.hatch.build.targets.wheel]
packages = ["src/lanorme"]

# Bundle docs/RULES.md inside the wheel so ``lanorme rule <CODE>`` works
# from any install location, not just from the source tree.
[tool.hatch.build.targets.wheel.force-include]
"docs/RULES.md" = "lanorme/RULES.md"

[tool.hatch.build.targets.sdist]
include = [
    "src/lanorme",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "docs/RULES.md",
    "pyproject.toml",
]

[tool.lanorme]
# LaNorme dogfoods its own rules, minus the DDD/architecture-specific ones
# (this is a flat library, not a layered domain app).
ignore = ["LAYER", "PORT", "TERM"]
exclude = [
    "tests/fixtures/*",          # deliberately dirty test inputs
    "evals/corpora/*",           # deliberately dirty labelled eval corpora
    "benchmarks/.corpora/*",     # downloaded third-party corpora
    "evals/score_*.py",          # per-check scorers share boilerplate by design
    "docs/cmt005-design.md",     # in-progress design note for the CMT-005 rule
    "docs/cmt005-corpus-audit.md",  # auto-generated bias-audit report (verbatim reviewer prose)
    "docs/cmt001-corpus-design.md", # auto-generated first-team corpus design (verbatim agent prose)
    "docs/sec002-corpus-design.md", # auto-generated first-team corpus design (verbatim agent prose)
    "docs/sec003-corpus-design.md", # auto-generated first-team corpus design (verbatim agent prose)
    "docs/audit/*",                 # multi-reviewer audit reports (verbatim reviewer prose)
    ".venv/*",
    "dist/*",
    "site/*",                       # mkdocs build output
]

[tool.lanorme.prose]
enabled = true

[tool.lanorme.comments]
em_dash = true
emoji = true

# Wave-A audit demotions: KWARG-001 and AAA-001/002 ship default-off (too
# noisy on a generic project), but LaNorme dogfoods both on itself.
[tool.lanorme.named_args]
enabled = true

[tool.lanorme.test_style]
enabled = true

# Dogfood the opt-in attribute-access smell check on LaNorme itself.
[tool.lanorme.attribute_access]
enabled = true

# Dogfood the opt-in fuzzy near-duplicate check on LaNorme itself.
[tool.lanorme.similarity]
enabled = true

# Dogfood the docs-structure check on our own documentation.
[tool.lanorme.docs]
enabled = true
